# efl-tizen

./: .gbs.conf  .gitignore  AUTHORS  COPYING  COPYING.images  Makefile.am  configure.ac  efl.manifest  elm_intro.h.in  meson.build  meson_options.txt
cmakeconfig/: meson.build
config/default/: base.src.in
config/standard/: base.src.in
data/: Makefile.am  meson.build
data/edje/: meson.build
data/edje/images/: meson.build
data/elementary/config/default/: base.src.in
data/elementary/config/standard/: base.src.in
data/elementary/themes/: Makefile.am  default.edc
data/elementary/themes/edc/elm/: border.edc  flipselector.edc  menu.edc  scroller.edc
data/eo/: eo_gdb.py
doc/: ecore_examples.dox  edje_examples.dox  elementary_examples.dox  elementary_examples_cxx.dox  main.dox
doc/widgets/: Makefile.am
header_checks/: meson.build
m4/: efl.m4  efl_check_funcs.m4  evas_check_engine.m4  evas_check_loader.m4
packaging/: efl-with-elm.spec.example  efl-without-elm.spec.example  efl.spec  elm-only.spec.example
pc/: ecore-core.pc.in
po/: LINGUAS  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  el_GR.po  en.po  en_PH.po  en_US.po  eo.po  es.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  he.po  hr.po  hu.po  hy.po  is.po  it.po  it_IT.po  ja.po  ja_JP.po  ka.po  kk.po  ko.po  ko_KR.po  lt.po  lv.po  (+24 more)
src/: Makefile.am  Makefile_Cxx.am  Makefile_Ecore.am  Makefile_Ecore_Audio.am  Makefile_Ecore_Buffer.am  Makefile_Ecore_Evas.am  Makefile_Ecore_Wayland.am  Makefile_Ecore_Wl2.am  Makefile_Ector.am  Makefile_Edje.am  Makefile_Eet.am  Makefile_Eeze.am  Makefile_Efl.am  Makefile_Efl_Mono.am  Makefile_Efreet.am  Makefile_Eina.am  Makefile_Eldbus.am  Makefile_Elementary.am  Makefile_Elementary_Tizen.am  Makefile_Embryo.am  Makefile_Emotion.am  Makefile_Ethumb.am  Makefile_Evas.am  Makefile_Wayland_Protocols.am  Makefile_efl_wl.am
src/bindings/mono/: meson.build
src/examples/: evas.mk
src/examples/ecore/: ecore_imf_example.c
src/examples/edje/: Makefile.am
src/examples/elementary/: Makefile.am
src/examples/evas/: Makefile.am  evas-vg-batman.c  evas-vg-json.c  evas-vg-simple.c
src/lib/ecore/: CMakeLists.txt  Ecore.h  Ecore_Common.h  Ecore_Eo.h  Ecore_Getopt.h  Ecore_Legacy.h  ecore.c  ecore_anim.c  ecore_animator.eo  ecore_device.c  ecore_event_message_handler.c  ecore_event_message_handler.eo  ecore_events.c  ecore_exe.c  ecore_exe_private.h  ecore_exe_win32.c  ecore_glib.c  ecore_idle_enterer.c  ecore_idle_enterer.eo  ecore_idle_exiter.c  ecore_idle_exiter.eo  ecore_idler.c  ecore_idler.eo  ecore_job.eo  ecore_main.c  ecore_main_common.h  ecore_pipe.c  ecore_poller.eo  ecore_private.h  ecore_thread.c  ecore_timer.c  ecore_timer.eo  efl_io_copier.eo  efl_loop.eo  efl_loop_handler.eo  efl_loop_timer.eo  efl_model_composite_selection.eo  efl_promise.c  meson.build
src/lib/ecore_audio/: Ecore_Audio.h  ecore_audio.c  ecore_audio.eo  ecore_audio_in.eo  ecore_audio_obj.h  ecore_audio_obj_in.h  ecore_audio_obj_in_sndfile.c  ecore_audio_obj_in_sndfile.h  ecore_audio_obj_in_tone.h  ecore_audio_obj_out.h  ecore_audio_obj_out_pulse.h  ecore_audio_obj_out_sndfile.h  ecore_audio_obj_out_tizen.c  ecore_audio_obj_out_tizen.h  ecore_audio_out.eo  ecore_audio_out_pulse.eo  ecore_audio_out_tizen.eo  ecore_audio_private.h  ecore_audio_pulse_ml.c  meson.build
src/lib/ecore_avahi/: Ecore_Avahi.h
src/modules/ecore_buffer/x11_dri3/: ecore_buffer_x11_dri3.c  meson.build
src/modules/ecore_evas/engines/tbm/: ecore_evas_tbm.c  meson.build
src/modules/elementary/prefs/: meson.build  prefs_iface.c
src/modules/evas/engines/: meson.build
src/modules/evas/engines/drm/: evas_engine.c
src/modules/evas/engines/eglfs/: evas_engine.c  evas_outbuf.c
src/modules/evas/engines/gl_cocoa/: evas_engine.c  evas_gl_cocoa_main.m  evas_outbuf.m
src/modules/evas/engines/gl_common/: evas_gl_3d.c  evas_gl_3d_renderer.c  evas_gl_3d_shader.c  evas_gl_api.c  evas_gl_api_ext.c  evas_gl_api_ext.h  evas_gl_api_ext_def.h  evas_gl_api_gles1.c  evas_gl_api_gles1_def.h  evas_gl_api_gles3_def.h  evas_gl_common.h  evas_gl_context.c  evas_gl_core.c  evas_gl_core.h  evas_gl_core_private.h  evas_gl_file_cache.c  evas_gl_image.c  evas_gl_line.c  evas_gl_polygon.c  evas_gl_rectangle.c  evas_gl_shader.c  evas_gl_surface_cache.c  evas_gl_texture.c  evas_gl_thread.c  evas_gl_thread.h  evas_gl_thread_egl.c  evas_gl_thread_egl.h  evas_gl_thread_evgl_api_generated.c  evas_gl_thread_evgl_api_generated.h  evas_gl_thread_evgl_generated.c  evas_gl_thread_evgl_generated.h  evas_gl_thread_evgl_link_generated.c  evas_gl_thread_evgl_link_generated.h  evas_gl_thread_gl.c  evas_gl_thread_gl.h  evas_gl_thread_gl_generated.c  evas_gl_thread_gl_generated.h  evas_gl_thread_gl_link_generated.c  evas_gl_thread_gl_link_generated.h  evas_gl_thread_glx.c  (+2 more)
src/modules/evas/engines/gl_common/shader/: evas_gl_shaders.x  fragment.glsl
src/modules/evas/engines/gl_drm/: evas_engine.c  evas_engine.h  evas_outbuf.c
src/modules/evas/engines/gl_generic/: Evas_Engine_GL_Generic.h  evas_ector_gl_buffer.c  evas_engine.c  meson.build
src/modules/evas/engines/gl_sdl/: evas_engine.c
src/modules/evas/engines/gl_tbm/: Evas_Engine_GL_Tbm.h  evas_engine.c  evas_engine.h  evas_tbm_main.c  meson.build
src/modules/evas/engines/gl_x11/: evas_engine.c  evas_engine.h  evas_x_main.c  meson.build
src/modules/evas/engines/software_generic/: Evas_Engine_Software_Generic.h  evas_engine.c  evas_engine.h  evas_native_common.h  evas_native_tbm.c
src/modules/evas/engines/software_tbm/: evas_engine.c  evas_engine.h  evas_outbuf.c  meson.build
src/modules/evas/engines/software_x11/: evas_engine.c
src/modules/evas/engines/wayland_common/: Evas_Engine_Wayland.h
src/modules/evas/engines/wayland_egl/: Evas_Engine_Wayland_Egl.h  evas_engine.c  evas_engine.h  evas_wl_main.c  meson.build
src/modules/evas/engines/wayland_shm/: Evas_Engine_Wayland_Shm.h  evas_engine.c  evas_engine.h  evas_outbuf.c  evas_shm.c  evas_tbmbuf.c  tizen-surface-client.h
src/scripts/: meson.build
src/wayland_protocol/: meson.build
(+891 files in other folders)
